@@ -1,3 +1,8 @@
+2002-05-10  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf32-hppa.c (elf32_hppa_size_stubs): Revert part of 2002-05-04,
+	don't look for stubs on all undefined syms.
+
 2002-05-09  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf64-ppc.c (RA_REGISTER_MASK, RA_REGISTER_SHIFT): Delete.
